Bug 15071 - In OPAC search results, "checked out" status should be more visible
The prog template in the OPAC designated a color for the "unavailable"
class associated with items in search results which are checked out.
This class never made it into the Bootstrap theme. This patch adds it to
the Bootstrap theme's LESS file.

To test, apply the patch and search the OPAC for terms that will return
checked out items. In the list of search results, on the "availability"
line, the "Checked out" text should now be red. The change is visible
with XSLT on or off.

--- a/koha-tmpl/opac-tmpl/bootstrap/less/opac.less
+++ b/koha-tmpl/opac-tmpl/bootstrap/less/opac.less
@@ -2073,6 +2073,10 @@ button.closebtn{padding:0;cursor:pointer;background:transparent;border:0;-webkit
     color : #006600;
 }
 
+.unavailable {
+    color: #990033;
+}
+
 .waiting,.intransit,.notforloan,.checkedout,.lost,.notonhold {
     display : block;
 }
